Fixed card content overflow problem

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 
 .card {
     width: 100%;
-    height: 100%;
+    height: 72%;
     margin: 2em auto;
     display: flex;
     flex-direction: column;
@@ -39,6 +39,7 @@ body {
 .img-container {
     width: 100%;
     height: 100%;
+    flex: 1;
     background: url(images/illustration-hero.svg);
     background-size: cover;
     background-position: center;
@@ -126,7 +127,7 @@ body {
     }
 
     .card {
-        width: fit-content;
+        width: 100%;
         height: 100%;
         margin: 1em 10em;
     }
@@ -150,7 +151,7 @@ body {
 
 @media screen and (min-width: 1000px) {
     .card {
-        width: fit-content;
+        width: 45%;
         height: 100%;
         margin: 1em 15em;
     }
@@ -159,6 +160,19 @@ body {
         width: 100%;
         height: 100%;
     }
+
+    .text-container p {
+        margin: 0em 3em;
+    }
+
+    .plan-section {
+      margin: 0.9em 3em;
+    }
+
+    .proceed-btn {
+        margin: 0.9em 3em;
+    }
+    
 }
 
 @media screen and (min-width: 1300px) {
